fix svg on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -145,8 +145,8 @@
   border-radius: 50%;
 
   & svg {
-    background-color: green;
     display: block;
+    width: 1.6rem;
     fill: var(--color-text);
   }
 
